--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
   "stack": "container",
   "env": { 
       "SESSION_ID": {
-      "description": "your session id",
+      "description": "Ethix-MD&1ECdWZ06",
       "required": true,
       "value": ""
     },
